// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps maps the action generators 1`] = `
Object {
  "payload": "my-url",
  "type": "CreateGroupFlow/SAVE_GROUP_URL",
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "fetchUrlPending": true,
  "groupUrl": "my-url",
  "urlExists": false,
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "CreateGroupFlow": Object {
    "groupUrl": "my-url",
    "urlExists": false,
  },
  "goToNextStep": [Function],
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "pending": Object {
    "CreateGroupFlow/FETCH_URL_EXISTS": true,
  },
}
`;
